# Pitchfork

./: CHANGELOG.md  CMakeLists.txt  README.md  STYLE_GUIDE.md  TODO.md
.github/workflows/: tests.yml
cmake/: pitch_sanitize.cmake
docs/: CMakeLists.txt  Doxyfile  custom.css
examples/: CMakeLists.txt  examples.cpp  main.cpp
examples/basics/: CMakeLists.txt
include/pitchfork/: doxygen.hpp  pitchfork.hpp
src/: pitchfork.cpp
tests/: CMakeLists.txt  answer_to_the_ultimate_question_of_life_the_universe_and_everything.cpp  main.cpp
